[package]
name = "hang-gst"
description = "Media over QUIC - Gstreamer plugin"
authors = ["Luke Curley"]
repository = "https://github.com/kixelated/hang-gst"
license = "MIT OR Apache-2.0"

version = "0.2.2"
edition = "2021"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
name = "gsthang"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Using published versions from crates.io instead of workspace
hang = "0.6"
moq-lite = "0.8"
moq-native = "0.8"

anyhow = { version = "1", features = ["backtrace"] }
gst = { package = "gstreamer", version = "0.23" }
gst-base = { package = "gstreamer-base", version = "0.23" }
#gst-app = { package = "gstreamer-app", version = "0.23", features = ["v1_20"] }

once_cell = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2"

[build-dependencies]
gst-plugin-version-helper = "0.8"
