[package]
name = "moq-gst"
description = "Media over QUIC - Gstreamer plugin"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/gstreamer"
license = "MIT OR Apache-2.0"

version = "0.2.2"
edition = "2021"
rust-version = "1.80"

keywords = ["quic", "http3", "webtransport", "media", "live"]
categories = ["multimedia", "network-programming", "web-programming"]

[lib]
name = "gstmoq"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hang = "0.14.0"
moq-mux = "0.2.1"
moq-lite = "0.14.0"
moq-native = "0.13.1"

anyhow = { version = "1", features = ["backtrace"] }
bytes = "1"
gst = { package = "gstreamer", version = "0.23" }
gst-base = { package = "gstreamer-base", version = "0.23" }
#gst-app = { package = "gstreamer-app", version = "0.23", features = ["v1_20"] }

tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2"

[build-dependencies]
gst-plugin-version-helper = "0.8"
